# sky-lynx

./: CLAUDE.md  README.md  project.json  pyproject.toml
cron/: sky-lynx
data/: proposals.db
data/claudeclaw-recommendations/: 2026-03-29_070039_skill_0.json  2026-04-01_070035_skill_0.json
docs/: overlap-watch-module-spec.md
reports/: 2026-03-15-sky-lynx-report.md
src/sky_lynx/: agent_effectiveness_tracker.py  analyzer.py  auto_applicator.py  claude_client.py  claudeclaw_writer.py  cost_reader.py  effectiveness_tracker.py  ideaforge_reader.py  insights_parser.py  linear_writer.py  manifest_refresh.py  metroplex_reader.py  mission_reader.py  model_audit_reader.py  outcome_reader.py  pr_drafter.py  preference_reader.py  proposal_tracker.py  report_writer.py  research_reader.py  skill_reader.py  starscream_reader.py  taste_capture.py  taste_reader.py  telemetry_reader.py  trigger_listener.py
tests/: test_agent_effectiveness_tracker.py  test_analyzer_integration.py  test_auto_applicator.py  test_claudeclaw_writer.py  test_cost_reader.py  test_effectiveness_tracker.py  test_ideaforge_reader.py  test_linear_writer.py  test_mission_reader.py  test_preference_reader.py  test_quality_correlation.py  test_research_reader.py  test_skill_reader.py  test_trigger_listener.py
