[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sky-lynx"
version = "0.1.0"
description = "Continuous improvement agent for Claude Code - analyzes usage insights and recommends CLAUDE.md updates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Matthew", email = "matthew@memyselfplusai.com" }
]
keywords = ["claude", "continuous-improvement", "kaizen", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.1.0",
    "mypy>=1.8",
]

[project.scripts]
sky-lynx = "sky_lynx.analyzer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sky_lynx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
